Fix issue where main content is shifted down
Because the left sidebar uses 'float: left' now, we do not want to
'clear: left'. This will probably cause problems with other uses of
'float' though elsewhere... will need to experiment to find good
ways forward to address those cases.

--- a/assets/css/debo.css
+++ b/assets/css/debo.css
@@ -66,10 +66,6 @@
 }
 
 
-.page-content h1, h2 {
-    clear: left;
-}
-
 .include {
     border: 2px solid red;
     padding: 5px;
